--- a/src/Header/_index.scss
+++ b/src/Header/_index.scss
@@ -24,11 +24,13 @@
     }
     .menu {
       color: $mainClrW;
+      font-size: $icon35;
     }
   }
 
   .logOut {
     color: $mainClrW;
+    font-size: $icon35;
   }
 }
 .between {
