--- a/src/Password/_index.scss
+++ b/src/Password/_index.scss
@@ -16,4 +16,9 @@
     cursor: pointer;
     color: aliceblue;
   }
+  .eye {
+    font-size: 1.3rem;
+    color: #444;
+    cursor: pointer;
+  }
 }
