--- a/src/Application/_index.scss
+++ b/src/Application/_index.scss
@@ -226,6 +226,7 @@
       display: flex;
       justify-content: center;
       gap: 20px;
+      margin: 20px 0;
       .submit {
         display: flex;
         justify-content: center;
