--- a/src/styles/btn/_generallyBtn.scss
+++ b/src/styles/btn/_generallyBtn.scss
@@ -1,10 +1,10 @@
 @import '../variable';
 
 .generallyBtn {
-  font-size: $contentText;
+  font-size: $btnTit;
   border: 0;
   padding: 2px 10px;
-  margin: 10px 25px;
+  margin: 0px 25px;
   border-radius: $borderRadius;
   transition: linear 0.3s;
   &:hover {
