--- a/src/styles/caseDetail/_uploadPage.scss
+++ b/src/styles/caseDetail/_uploadPage.scss
@@ -14,7 +14,7 @@
   @include maxWidth;
   @include flexBetween;
   .addTitle {
-    font-size: 14px;
+    font-size: $contentText18;
     font-weight: 600;
     color: $subClrBrown;
   }
@@ -110,7 +110,7 @@
   .receiveFileTime {
     font-weight: 600;
     color: $mainClrW;
-    font-size: 14px;
+    font-size: $contentText18;
     padding-bottom: 5px;
   }
   .textContain {
@@ -153,7 +153,7 @@
       @include flexCenter;
       width: 50%;
       height: 35px;
-      font-size: 14px;
+      font-size: $contentText18;
       font-weight: 600;
       color: $subClrBrown;
       background: $mainClrW;
@@ -178,7 +178,7 @@
     padding: 0 8px;
 
     .filesTime {
-      font-size: 14px;
+      font-size: $contentText18;
       color: $subClrBrown;
       background: rgba(255, 250, 205, 0.712);
     }
