add record page

--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -372,7 +372,7 @@
       max-width: 95%;
     }
     .tableContainer {
-      background: lightblue;
+      // background: lightblue;
       max-width: 95%;
 
       .appTitle {
