--- a/src/styles/caseManagement/_caseManagement.scss
+++ b/src/styles/caseManagement/_caseManagement.scss
@@ -7,11 +7,10 @@
   // background: rgb(231, 190, 151);
   width: 90%;
   height: calc(100vh - 70px);
-  // margin: 0 auto;
-  // padding-bottom: 30px;
-  font-size:$contentText18;
-  // display: flex;
-  // flex-direction: column;
+  font-size: $contentText18;
+  .mobileToggle {
+    display: none;
+  }
   .case {
     @include scrollbar;
   }
