--- a/src/CaseReport/_CaseReport.scss
+++ b/src/CaseReport/_CaseReport.scss
@@ -7,11 +7,10 @@
   // background: rgb(231, 190, 151);
   width: 90%;
   height: calc(100vh - 70px);
-  // margin: 0 auto;
-  // padding-bottom: 30px;
   font-size: clamp(12px, 1vw, 18px);
-  // display: flex;
-  // flex-direction: column;
+  .mobileToggle {
+    display: none;
+  }
   .case {
     @include scrollbar;
   }
