--- a/src/Audit/_index.scss
+++ b/src/Audit/_index.scss
@@ -93,7 +93,8 @@
   }
   .caseContain {
     margin: 20px auto 0;
-
+    width: 60%;
+    table-layout: fixed;
     tbody :hover {
       background: #eee;
     }
