--- a/src/WorkLogSearch/_index.scss
+++ b/src/WorkLogSearch/_index.scss
@@ -1,25 +1,180 @@
 @import '../styles/variable';
 
+.viewWorkLogContain {
+  background: lemonchiffon;
+  position: absolute;
+  z-index: 100;
+  height: calc(100% - 75px);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 1270px;
+  @media only screen and (max-width: 576px) {
+    width: 370px;
+  }
+  // @media only screen and (min-width: 576px) {
+  //   width: 1270px;
+  // }
+  background: rgba(0, 0, 0, 0.55);
+  font-size: clamp(12px, 1vw, 18px);
+
+  .addWorkLog {
+    position: relative;
+    width: 90%;
+    background: $mainClrW;
+    padding: 0 15px 10px;
+    margin: auto;
+    .box {
+      justify-content: space-between;
+      width: 85%;
+
+      div {
+        margin-top: $marage10;
+      }
+      .gap {
+        // margin-left: 5px;
+        margin-right: 5px;
+        span {
+          @include focusText;
+        }
+
+        .inputCheck {
+          margin-top: $marage10;
+        }
+      }
+      .contain {
+        height: 100px;
+      }
+      .handler {
+        width: $columW;
+        height: $columH;
+        // margin-top: $marage10;
+        .form-check {
+          margin-right: 8px;
+          margin-top: 4px;
+        }
+      }
+      .hide-arrows::-webkit-outer-spin-button,
+      .hide-arrows::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    }
+
+    .needs {
+      width: 85%;
+      justify-content: start;
+      align-items: center;
+      .addIcon {
+        font-size: 1.3rem;
+        cursor: pointer;
+        color: $focusClrG;
+      }
+
+      .need {
+        span {
+          @include focusText;
+        }
+        .one {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          // background-color: $header;
+          // color: $mainClrW;
+          padding-left: 5px;
+          div {
+            margin-top: 2px;
+            margin-bottom: 2px;
+          }
+          span {
+            @include focusText;
+          }
+        }
+
+        & div {
+          display: flex;
+          margin-top: $marage10;
+          .input {
+            width: 100%;
+          }
+        }
+      }
+    }
+  }
+  .closeBtn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+  .title {
+    font-size: $contentTit;
+    font-weight: 600;
+    text-align: center;
+    padding: 10px 0 5px;
+    color: $subClrBrown;
+    border-bottom: 1px solid $subClrBrown;
+    margin-bottom: 8px;
+  }
+  .viewContain {
+    // background: lemonchiffon;
+    @include scrollbar;
+    max-height: 600px;
+  }
+  .viewWorkLogFormContainer {
+    width: 90%;
+    background: #ccc;
+    margin: 15px auto;
+    padding: 10px;
+    // font-size: 14px;
+    .remark {
+      resize: none;
+      width: 75%;
+      @include scrollbarContain;
+    }
+    .selectRemind {
+      // font-size: 12px;
+      @include focusText;
+      margin-left: 5px;
+    }
+  }
+  button {
+    display: block;
+    margin: 0 auto;
+    padding: 4px 8px;
+    border: 0;
+    border-radius: 5px;
+    color: $mainClrW;
+    background: $subClrBrown;
+    transition: linear 0.2s;
+    &:hover {
+      box-shadow: 0.2px 0.2px 4px #777777c9;
+    }
+  }
+}
+
 .workLogSearchContainer {
   // background: lemonchiffon;
   max-width: 1270px;
   height: calc(100vh - 70px);
   font-size: $contentText18;
   .sortSelect1 {
-    padding: 30px 0px 10px 0px;
+    // background: lemonchiffon;
+    padding: 30px 0px 20px 0px;
     display: flex;
-    justify-content: center;
-    .bothFilter1 {
+    align-items: center;
+    .month {
       display: flex;
-      justify-content: center;
+      align-items: center;
     }
   }
   .workContainer {
     @include scrollbar;
-
+    height: 85%;
     .workContain {
       // background: lightblue;
-      margin: 20px auto 0;
+      // margin: 0 auto $marage10;
 
       tbody :hover {
         background: #eee;
@@ -45,6 +200,24 @@
         .sortBtn {
           @include flexCenter;
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .workLogSearchContainer {
+    max-width: 370px;
+    .sortSelect1 {
+      // background: lightcoral;
+      // padding: 30px 0px 10px 0px;
+      // display: flex;
+      // align-items: center;
+      justify-content: center;
+      .month {
+        // display: flex;
+        align-items: flex-start;
+        flex-direction: column;
       }
     }
   }
