--- a/src/WorkLog/_index.scss
+++ b/src/WorkLog/_index.scss
@@ -143,10 +143,13 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    //置中
+    // @include flexCenter;
     @media only screen and (max-width: 576px) {
       width: 100%;
     }
     @media only screen and (min-width: 576px) {
+      // width: 87%;
       width: 70%;
     }
     background: rgba(0, 0, 0, 0.55);
@@ -158,6 +161,7 @@
       background: $mainClrW;
       padding: 0 15px 10px;
       margin-top: 10%;
+
       .box {
         justify-content: space-between;
         width: 85%;
