--- a/src/styles/count/_countPage.scss
+++ b/src/styles/count/_countPage.scss
@@ -30,6 +30,15 @@
       justify-content: start;
     }
   }
+  .sortSelect {
+    // background: lemonchiffon;
+    padding: 20px 0px 0px;
+    .userSort {
+      display: flex;
+      align-items: center;
+      justify-content: start;
+    }
+  }
   .userFlex {
     display: flex;
     align-items: center;
