--- a/src/WorkLogSearch/_index.scss
+++ b/src/WorkLogSearch/_index.scss
@@ -1,7 +1,7 @@
 @import '../styles/variable';
 
 .viewWorkLogContain {
-  background: lemonchiffon;
+  // background: lemonchiffon;
   position: absolute;
   z-index: 100;
   height: calc(100% - 75px);
@@ -81,7 +81,7 @@
           align-items: center;
           // background-color: $header;
           // color: $mainClrW;
-          padding-left: 5px;
+          // padding-left: 5px;
           div {
             margin-top: 2px;
             margin-bottom: 2px;
@@ -94,9 +94,9 @@
         & div {
           display: flex;
           margin-top: $marage10;
-          .input {
-            width: 100%;
-          }
+        }
+        .directions {
+          width: 100%;
         }
       }
     }
@@ -174,7 +174,6 @@
     height: 85%;
     .workContain {
       // background: lightblue;
-      // margin: 0 auto $marage10;
 
       tbody :hover {
         background: #eee;
@@ -201,23 +200,32 @@
           @include flexCenter;
         }
       }
+      .noData {
+        padding: 15px;
+        text-align: start;
+        color: $focusClrG;
+      }
     }
   }
 }
 
 @media screen and (max-width: 1000px) {
+  .viewWorkLogContain {
+    .viewContain {
+      // background: lemonchiffon;
+      @include scrollbar;
+      max-height: 500px;
+    }
+  }
+
   .workLogSearchContainer {
     max-width: 370px;
     .sortSelect1 {
-      // background: lightcoral;
-      // padding: 30px 0px 10px 0px;
-      // display: flex;
-      // align-items: center;
       justify-content: center;
       .month {
-        // display: flex;
         align-items: flex-start;
         flex-direction: column;
+        padding-left: 2px;
       }
     }
   }
