--- a/src/Header/_index.scss
+++ b/src/Header/_index.scss
@@ -64,7 +64,7 @@
       color: $focusClrG;
     }
     .count {
-      transform: translateX(-300px);
+      // transform: translateX(-300px);
       div {
         margin-top: 0px;
         margin-left: 20px;
