--- a/src/WorkLogSearch/_index.scss
+++ b/src/WorkLogSearch/_index.scss
@@ -156,7 +156,7 @@
 
 .workLogSearchContainer {
   // background: lemonchiffon;
-  max-width: 1270px;
+  width: 1270px;
   height: calc(100vh - 70px);
   font-size: $contentText18;
   .sortSelect1 {
@@ -242,7 +242,7 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1400px) {
   .viewWorkLogContain {
     .viewContain {
       // background: lemonchiffon;
@@ -250,9 +250,8 @@
       max-height: 500px;
     }
   }
-
   .workLogSearchContainer {
-    max-width: 370px;
+    width: 1000px;
     .sortSelect1 {
       align-items: flex-start;
       flex-direction: column;
@@ -284,6 +283,32 @@
             background: $focusClrP;
             margin-left: $marage10;
           }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 1200px) {
+  .viewWorkLogContain {
+    .viewContain {
+      max-height: 500px;
+    }
+  }
+  .workLogSearchContainer {
+    width: 370px;
+    .sortSelect1 {
+      // background: lemonchiffon;
+      margin: 0 auto;
+      // padding: 30px 0px 20px 0px;
+      // display: flex;
+      align-items: center;
+      .monthSelect {
+        // background: lemonchiffon;
+        display: flex;
+        .month {
+          display: flex;
+          align-items: flex-start;
+          // justify-content: flex-start;
         }
       }
     }
