--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -25,7 +25,7 @@ $navbarLeft: clamp(12px, 2.5vw, $contentText);
 $contentText18: clamp(12px, 1vw, $contentText);
 $contentTit: clamp(18px, 1.5vw, $containerTit28);
 
-$btnTit: clamp(14px, 18px, 24px);
+$btnTit: clamp(14px, 1.3vw, 24px);
 
 // 欄位寬度
 $columW: clamp(158px, 250px, 280px);
