--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -48,7 +48,7 @@ $borderRadius: 5px;
 $icon35: clamp(20px, 28px, 35px);
 
 // BTN顏色
-// 1. $focusClrP #e77979-> 上傳檔案
+// 1. $focusClrP #e77979-> 上傳檔案、重要標示
 // 2. $focusClrB #2c75c8-> 儲存、修改、更改
 // 3. $focusClrY #f2ac33-> 送出、確認、完成、是
 // 4. #ccc -> 刪除、取消、否
