--- a/src/styles/caseManagement/_caseManagement.scss
+++ b/src/styles/caseManagement/_caseManagement.scss
@@ -63,7 +63,7 @@
         color: $focusClrG;
       }
       .sortBtn {
-        @include flexCenter;
+        // @include flexCenter;
       }
     }
   }
