--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -16,6 +16,10 @@
 .m-view {
   display: none;
 }
+.dealWithBorder{
+  // background: lightblue;
+  border: 1px solid #ccc;
+}
 .appFormContainer {
   // background: lemonchiffon;
   // max-width: 100%;
@@ -337,9 +341,8 @@
   color: $mainClrW;
   text-align: center;
   padding: 5px;
-  margin-top: 10px;
+  margin-top: $marage10;
   border-radius: 4px;
-  margin-top: 20px;
 }
 
 .nullData {
