--- a/src/styles/caseManagement/_caseManagement.scss
+++ b/src/styles/caseManagement/_caseManagement.scss
@@ -15,11 +15,26 @@
     @include scrollbar;
   }
   .sortSelect {
-    // background: lemonchiffon;
+    background: lemonchiffon;
     width: 100%;
     padding: 20px 0px 0px;
     display: flex;
     justify-content: space-between;
+    // height: 0px;
+    .selIcon {
+      margin-bottom: $marage10;
+    }
+    .click {
+      color: $subClrBrown;
+    }
+    .selTrans {
+      z-index: -1;
+    }
+    .up {
+      transform: translateY(-200px);
+    }
+    .down {
+    }
     .bothFilter {
       display: flex;
       justify-content: flex-start;
