--- a/src/CaseReport/_CaseReport.scss
+++ b/src/CaseReport/_CaseReport.scss
@@ -80,7 +80,7 @@
   }
   .noData {
     // background: lavenderblush;
-    font-size: 14px;
+    font-size: $contentText18;
     color: $focusClrG;
     text-align: center;
     .noTd {
