--- a/src/styles/count/_countPage.scss
+++ b/src/styles/count/_countPage.scss
@@ -1,5 +1,15 @@
 @import '../variable';
 
+// .recharts-text recharts-cartesian-axis-tick-value {
+//   width: 10px;
+//   height: 10px;
+//   white-space: pre-wrap;
+
+// }
+// text {
+//   transform: rotate(-35);
+// }
+
 .caseWrap {
   width: 1260px;
   height: calc(100vh - 70px);
